force-app/main/default/objects/Order/fields/Agencia_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Agencia_de_entrega__c</fullName>
    <label>Agencia de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autoalmendro</fullName>
            </value>
            <value>
                <fullName>Autoceiba</fullName>
            </value>
            <value>
                <fullName>Autocipres 101</fullName>
            </value>
            <value>
                <fullName>Autocipres Usaquen</fullName>
            </value>
            <value>
                <fullName>Autocoral</fullName>
            </value>
            <value>
                <fullName>Autoguayacan</fullName>
            </value>
            <value>
                <fullName>Autolaurel</fullName>
            </value>
            <value>
                <fullName>Autolaurel Circunvalar</fullName>
            </value>
            <value>
                <fullName>Autopalma</fullName>
            </value>
            <value>
                <fullName>DIST. ALCALA MOTOR BOGOTA</fullName>
            </value>
            <value>
                <fullName>DIST. ALCALA MOTOR TUNJA</fullName>
            </value>
            <value>
                <fullName>DIST. ALCALA MOTOR VILLAVICENCIO</fullName>
            </value>
            <value>
                <fullName>DIST. ARMOTOR ARMENIA</fullName>
            </value>
            <value>
                <fullName>DIST. ARMOTOR MANIZALES</fullName>
            </value>
            <value>
                <fullName>DIST. ARMOTOR PEREIRA</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOACACIO STA. MARTA</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOACACIO VALLEDUPAR</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOARRAYAN</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOCAOBOS</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOCEDRO - COLWAGEN</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOCHICALA</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOSAMAN IBAGUÉ</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOSAMAN NEIVA</fullName>
            </value>
            <value>
                <fullName>DIST. AUTOSAMAN - NEIVA</fullName>
            </value>
            <value>
                <fullName>DIST AUTOSAKURA</fullName>
            </value>
            <value>
                <fullName>DIST. CENTRO MOTORS S.A. - TULUA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>