force-app/main/default/objects/Order/fields/Ao_modelo__c.field-meta.xml
<CustomField>
    <fullName>Ao_modelo__c</fullName>
    <label>Año modelo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>