force-app/main/default/objects/Order/fields/C_digo_SAP_cliente__c.field-meta.xml
<CustomField>
    <fullName>C_digo_SAP_cliente__c</fullName>
    <formula>Account.Codigo_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código SAP cliente</label>
    <type>Text</type>
</CustomField>