force-app/main/default/objects/Order/fields/Ciudad_Placa__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Placa__c</fullName>
    <label>Ciudad Placa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>