force-app/main/default/objects/Order/fields/Codigo_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Producto__c</fullName>
    <label>Codigo Producto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>