force-app/main/default/objects/Order/fields/Codigo_sap_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_sap_cliente__c</fullName>
    <label>Código SAP cliente</label>
    <length>12</length>
    <type>Text</type>
</CustomField>