force-app/main/default/objects/Order/fields/Cuota_inicial__c.field-meta.xml
<CustomField>
    <fullName>Cuota_inicial__c</fullName>
    <label>Cuota inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>