force-app/main/default/objects/Order/fields/Descuento_en_precio__c.field-meta.xml
<CustomField>
    <fullName>Descuento_en_precio__c</fullName>
    <label>Descuento en precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>