force-app/main/default/objects/Order/fields/Entidad_financiera__c.field-meta.xml
<CustomField>
    <fullName>Entidad_financiera__c</fullName>
    <label>Entidad financiera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>