force-app/main/default/objects/Order/fields/Estado_Pedido_en_ERP__c.field-meta.xml
<CustomField>
    <fullName>Estado_Pedido_en_ERP__c</fullName>
    <label>Estado Pedido en ERP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>