force-app/main/default/objects/Order/fields/Fecha_de_entrega_del_vehculo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega_del_vehculo__c</fullName>
    <label>Fecha de entrega del vehículo</label>
    <type>Date</type>
</CustomField>