force-app/main/default/objects/Order/fields/Impuesto_al_consumo__c.field-meta.xml
<CustomField>
    <fullName>Impuesto_al_consumo__c</fullName>
    <label>Impuesto al consumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>