force-app/main/default/objects/Order/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <label>Kilometraje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>