force-app/main/default/objects/Order/fields/Linea__c.field-meta.xml
<CustomField>
    <fullName>Linea__c</fullName>
    <label>Linea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>