force-app/main/default/objects/Order/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <label>Matricula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>