force-app/main/default/objects/Order/fields/Motocicleta_o_producto__c.field-meta.xml
<CustomField>
    <fullName>Motocicleta_o_producto__c</fullName>
    <label>Motocicleta o producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>