force-app/main/default/objects/Order/fields/N_mero_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Factura__c</fullName>
    <label>Número de Factura</label>
    <length>60</length>
    <type>Text</type>
</CustomField>