force-app/main/default/objects/Order/fields/NIT__c.field-meta.xml
<CustomField>
    <fullName>NIT__c</fullName>
    <label>NIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>