force-app/main/default/objects/Order/fields/Numero_del_pedido__c.field-meta.xml
<CustomField>
    <fullName>Numero_del_pedido__c</fullName>
    <label>Número del pedido</label>
    <length>30</length>
    <type>Text</type>
</CustomField>