force-app/main/default/objects/Order/fields/Pagador__c.field-meta.xml
<CustomField>
    <fullName>Pagador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Pagador)</relationshipLabel>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>