force-app/main/default/objects/Order/fields/Pedido_creado_ERP__c.field-meta.xml
<CustomField>
    <fullName>Pedido_creado_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido creado ERP</label>
    <type>Checkbox</type>
</CustomField>