force-app/main/default/objects/Order/fields/Precio_de_vehiculo_IVA_incluido__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_vehiculo_IVA_incluido__c</fullName>
    <label>Precio de vehiculo (IVA incluido)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>