force-app/main/default/objects/Order/fields/Recibo_de_caja__c.field-meta.xml
<CustomField>
    <fullName>Recibo_de_caja__c</fullName>
    <label>Recibo de caja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>