force-app/main/default/objects/Order/fields/Referencia_del_vehculo_con_color__c.field-meta.xml
<CustomField>
    <fullName>Referencia_del_vehculo_con_color__c</fullName>
    <label>Referencia del vehículo con color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>