force-app/main/default/objects/Order/fields/Seguro_de_Moto__c.field-meta.xml
<CustomField>
    <fullName>Seguro_de_Moto__c</fullName>
    <label>Seguro de Moto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>