force-app/main/default/objects/Order/fields/Soat__c.field-meta.xml
<CustomField>
    <fullName>Soat__c</fullName>
    <label>Soat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>