force-app/main/default/objects/Order/fields/Solicitud_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_pedido__c</fullName>
    <label>Solicitud de pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>