force-app/main/default/objects/Order/fields/Tipo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pago__c</fullName>
    <label>Tipo de Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>