force-app/main/default/objects/Order/fields/Titular_prendario__c.field-meta.xml
<CustomField>
    <fullName>Titular_prendario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular prendario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Titular prendario)</relationshipLabel>
    <relationshipName>Pedidos2</relationshipName>
    <type>Lookup</type>
</CustomField>