force-app/main/default/objects/Order/fields/Total_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Total_Negocio__c</fullName>
    <label>Total Negocio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>