force-app/main/default/objects/Order/fields/Valor_Total_Monto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Monto__c</fullName>
    <label>Valor Total Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>