force-app/main/default/objects/Order/validationRules/Longitud_de_VIN.validationRule-meta.xml
<ValidationRule>
    <fullName>Longitud_de_VIN</fullName>
    <active>true</active>
    <description>La longitud del campo VIN debe ser de 6 caracteres máximo.</description>
    <errorConditionFormula>LEN( VIN__c ) &gt; 6</errorConditionFormula>
    <errorDisplayField>VIN__c</errorDisplayField>
    <errorMessage>La longitud del campo VIN debe ser de 6 caracteres máximo</errorMessage>
</ValidationRule>